--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 				<p>Why Donald is Boujee</p>
 			</div>
 			<div class="right">
-				<img src="images/donaldshirt.jpg "width=75%">
+				<img src="images/donaldshirt.JPG" width="75%">
 			</div>
               <div class="left">
-			  				<img src="images/ucla.jpg "width=75%">
+			  				<img src="images/ucla.JPG" width="75%">
 				<p>Classroom/Leadership Technology</p>
 			</div>
 			<div class="here">
-			<img src="images/donald.jpg "width=75%>
+			<img src="images/donald.jpg" width="75%">
 				<p>Quotes from Donald</p>
 			</div>
 			<div class="there">
-			<img src="images/lead.jpg "width=75%>
+			<img src="images/lead.jpg" width="75%">
 				<p>Leadership Quotes</p>
 			</div>
 			<div class="topnav">
