--- a/leadership.html
+++ b/leadership.html
@@ -14,19 +14,19 @@
 			</div>
 			<div class="right">
 			<p>Geo Espinoza 11th grade</p>
-			<img src="images/geo.jpg" width=75%>
+			<img src="images/geo.JPG" width="75%">
 			</div>
             <div class="left">
-			<img src="images/logan.jpg "width=75%>
+			<img src="images/logan.JPG" width="75%">
 		     <p>Logan Evans 10th grade</p>
 			</div>
 			<div class="here">
-			<img src="images/matt.jpg "width=75%>
+			<img src="images/matt.JPG" width="75%">
 			 <p>Matthew Garcia 10th grade</p>
 			</div>
 			<div class="there">
 			 <p>Cady Tran 11th grade</p>
-			 <img src="images/cady.JPG "width=75%>
+			 <img src="images/cady.JPG" width="75%">
 			</div>
 			<div class="topnav">
 			<p>Morgan: Do you think Donald is boujee and if so give me an example</p>
