--- a/shops.html
+++ b/shops.html
@@ -12,19 +12,19 @@
 				<p>Where Donald Shops at</p>
 			</div>
 			<div class="right">
-				<img src="images/pointing.jpg" width=75%>
+				<img src="images/pointing.jpg" width="75%">
 			</div>
             <div class="left">
 				<p>Banana Republic</p>
-				<img src="images/banana.png "width=75%>
+				<img src="images/banana.png" width="75%">
 			</div>
 			<div class="here">
 				<p>Amazon Prime</p>
-				<img src="images/amazon.jfif "width=75%>
+				<img src="images/amazon.jfif" width="75%">
 			</div>
 			<div class="there">
 				<p>Starbucks</p>
-				<img src="images/starbucks.png" width=75%>
+				<img src="images/starbucks.png" width="75%">
 			</div>
 			<div class="topnav">
 			<p>These shops are clearly boujee because they are high class and expensive, So the fact that he shops at those places proves my point!</p>
