--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				<p>Classroom/Leadership Technology</p>
 			</div>
 			<div class="here">
-			<img src="images/donald.jpg" width="75%">
+			<img src="images/donald.JPG" width="75%">
 				<p>Quotes from Donald</p>
 			</div>
 			<div class="there">
-			<img src="images/lead.jpg" width="75%">
+			<img src="images/lead.JPG" width="75%">
 				<p>Leadership Quotes</p>
 			</div>
 			<div class="topnav">
