--- a/shops.html
+++ b/shops.html
@@ -12,7 +12,7 @@
 				<p>Where Donald Shops at</p>
 			</div>
 			<div class="right">
-				<img src="images/pointing.jpg" width="75%">
+				<img src="images/pointing.JPG" width="75%">
 			</div>
             <div class="left">
 				<p>Banana Republic</p>
